# inspire-hep

./: .flake8  .gitignore  .localdatabase.json  .metadata.json  .pre-commit-config.yaml  README.md  arxiv.py  bib.py  cds.py  citations.py  example.json  get_bib.py  get_citation_count.py  inspirehep.py  mypub.bib  mypub.csv  mypub.py  notebook.ipynb  paper.py  pyproject.toml  read_csv.ipynb  requirements.txt  summarize.py  test_bib.txt  update.py  writer.py
data/: cms_llp.bib  in_cms_llp.txt  input_lhc_inspirehep.txt  input_tau_arxiv.txt  lhc.bib  tau.bib
publications/: 2010-10-01-p1.md  2011-04-01-p2.md  2011-09-01-p3.md  2012-02-01-p4.md  2012-02-01-p5.md  2012-07-01-p6.md  2014-06-15-p7.md  2014-08-14-p8.md  2014-08-21-p9.md  2015-07-03-p10.md  2016-04-26-p11.md  2016-06-13-p12.md  2017-07-13-p13.md  2017-08-31-p14.md  2017-11-09-p15.md  2017-12-18-p16.md  2018-08-07-p17.md  2020-03-25-p18.md  2020-04-09-p19.md  2020-06-30-p20.md  2020-07-15-p21.md  2020-08-25-p22.md  2020-09-30-p23.md  2020-12-08-p24.md  2021-03-09-p25.md  2021-03-09-p27.md  2021-03-10-p26.md  2021-03-11-p28.md  2022-02-14-p29.md  2022-03-10-p30.md  2022-03-14-p31.md  2022-03-15-p39.md  2022-03-15-p40.md  2022-03-23-p32.md  2022-07-12-p50.md  2022-08-12-p33.md  2022-08-25-p34.md  2022-10-21-p35.md  2023-01-01-p35.md  2023-01-01-p36.md  (+23 more)
